updated PUT operation